--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-vertical-timeline-component": "^3.3.5"
   }
 }
